--- a/sass/mixins/_mixins.socials.scss
+++ b/sass/mixins/_mixins.socials.scss
@@ -7,22 +7,16 @@
     $stickyOffset: $menu--main-navigation-min-height;
     float: left;
     position: sticky;
-    top: $sticky-padding;
-    padding-top: $stickyOffset;
-    margin-top: -$stickyOffset;
+    top: $sticky-padding + $padding;
 
     .toolbar-fixed & {
-      $stickyOffset: $menu--main-navigation-min-height +
-        $toolbar-administration__height--closed;
-      padding-top: $stickyOffset;
-      margin-top: -$stickyOffset;
+      $stickyOffset: $menu--main-navigation-min-height + $toolbar-administration__height--closed;
+      top: $sticky-padding + $padding;
     }
 
     .toolbar-tray-open & {
-      $stickyOffset: $menu--main-navigation-min-height +
-        $toolbar-administration__height--open;
-      padding-top: $stickyOffset;
-      margin-top: -$stickyOffset;
+      $stickyOffset: $menu--main-navigation-min-height + $toolbar-administration__height--open;
+      top: $sticky-padding + $padding;
     }
   }
 
